# uv-streamlit

.devcontainer/: devcontainer.json
streamlit-tut/: pyproject.toml
streamlit-tut/src/streamlit_tut/: __init__.py  basic_elements.py
