[project]
name = "streamlit-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.42.2",
]

[project.scripts]
streamlit-tut = "streamlit_tut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
